# LosAlamos

./: .gitignore  CLAUDE.md  ROADMAP.md  pyproject.toml
docs/: cycle1-testlist.md  cycle2-testlist.md
docs/superpowers/plans/: 2026-06-16-cycle1.md  2026-06-17-50-move-counter.md  2026-06-17-captured-diff-deselect.md  2026-06-17-cycle2-bots.md  2026-06-17-dropdown-zorder-open-last.md  2026-06-17-info-panel-ui.md  2026-06-17-last-move-highlight.md  2026-06-17-main-menu-ui-fixes.md  2026-06-17-threaded-bots-live-eval.md  2026-06-18-mate-display-early-termination.md
docs/superpowers/specs/: 2026-06-16-cycle1-design.md  2026-06-17-50-move-counter-design.md  2026-06-17-captured-diff-deselect-design.md  2026-06-17-cycle2-design.md  2026-06-17-dropdown-zorder-open-last-design.md  2026-06-17-info-panel-ui-design.md  2026-06-17-last-move-highlight-design.md  (+3 more)
lessons_learned/: cycle_1.md  cycle_2.md
lessons_learned/darts/: cycle_1.md  cycle_2.md
lessons_learned/lunchorder/: cycle_1.md  cycle_2.md  cycle_3.md  cycle_4.md  cycle_5.md  cycle_6.md
src/: main.py
src/bots/: base.py  evaluator.py  greedy_bot.py  mcts_bot.py  minimax_bot.py  personalities.py  progress.py  random_bot.py
src/engine/: board.py  gamestate.py  move.py  movegen.py  positions.py  zobrist.py
src/gui/: assets.py  constants.py  game_screen.py  main_menu.py  widgets.py
tests/: test_board.py  test_bots.py  test_evaluator.py  test_gamestate.py  test_gui.py  test_mcts.py  test_minimax.py  test_movegen.py  test_personalities.py  test_progress.py
user_input/: requirements.txt
