[project]
name = "los-alamos"
version = "0.1.0"
description = "Los Alamos chess - a 6x6 board variant implemented with pygame"
requires-python = ">=3.11"
dependencies = [
    "pygame>=2.6.1",
]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "ruff>=0.15.17",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
